Version 16.88 - 25 April 2015

- ensure country/timezone locale is kept when removing unused locale
  packages (mga#3723)

Version 16.87 - 22 April 2015

- partitioning_wizard:
  o improve the display box (mga#15728)

Version 16.86 - 20 April 2015

- bootloader:
  o dont override 'splash' and/or 'quiet' when adding 'noiswmd' (mga#15666)
- partitioning_wizard:
  o use the windows partition with the most available space on current
    disk, not the last one across all disks (mga#15589)
  o suggest up to 20GB/20% of the windows partition (whichever is larger),
    previously 6GB/10% (mga#15589)
  o hide empty space < 2MB, we have such holes due to alignment (mga#15733)
- ugtk2, ugtk3, harddrake2:
  o do not "restore" mouse cursor on the root window, we haven't set it to
    'wait' since 2005 and this causes a crash if we don't own it (mga#15729).
- speed up reading of flags from GPT partition table (mga#15621).

Version 16.85 - 15 April 2015

- reuse ESP with "use free space" in live (mga#15690)

Version 16.84 - 14 April 2015

- drakboot:
  o fix kernel booting in blind mode (mga#15291)

Version 16.82 - 13 April 2015

- diskdrake:
  o detect Lenovo recovery & 'SYSTEM_DRV' as such (mga#1371)
  o do add a ESP if it was removed by "Clear All"
  o ignore ESP for "use free space on MS"
- drakboot:
  o default to GRUB_DISABLE_RECOVERY=falss for 'failsafe' entry (mga#15675)

Version 16.81 - 12 April 2015

- dont force 'p' for dmraid partitions,  it's conditional depending
  on device naming like dmraid, kpartx and kernel handles it
- diskdrake:
  o don't guess a drive letter for ESP partitions

Version 16.80 - 9 April 2015

- diskdrake:
  o don't guess a drive letter for recovery partitions (mga15636)
- drakboot:
  o check there's still some place on /boot with grub2 too
  o fix detecting grub2 on UEFI

Version 16.79 - 7 April 2015

- drakboot:
  o keep vga= parameter when switching to grub2 (mga#9888)

Version 16.78 - 7 April 2015

- drakboot: