@@ -1,3 +1,5 @@
+- Ignore special partitions on mmc (mga#15759)
+
 Version 16.87 - 21 April 2015
 
 - partitioning:
