@@ -1,3 +1,5 @@
+- Ignore special partitions on mmc (mga#15759)
+
 Version 16.88 - 25 April 2015
 
 - ensure country/timezone locale is kept when removing unused locale
